[package]
name = "easydep"
version = "0.1.0"
authors = ["easybill"]

edition = "2021"
rust-version = "1.56.1" # 2021 edition requires 1.56

license = "MIT"
publish = false
repository = "https://github.com/easybill/easydep"
description = "An HTTP driven, server side deployment executing tool"

[profile.release]
lto = true
strip = true
panic = 'abort'
opt-level = 'z'
codegen-units = 1

[dependencies]
anyhow = "*"
axum = "0.7.*"
serde = "1.0.*"
cached = "0.48.*"
secrecy = "0.8.*"
symlink = "0.1.*"
fs_extra = "1.3.*"
octocrab = "0.33.*"
crossbeam = "0.8.*"
serde_derive = "1.0.*"
jsonwebtoken = "9.2.*"
tokio = { version = "1.35.*", features = ["full"] }
chrono = { version = "0.4.*", default-features = false }
clap = { version = "4.4.*", features = ["derive", "env"] }

# logging
log = "0.4.*"
syslog = "6.1.*"
simple_logger = { version = "4.3.*", default-features = false, features = ["timestamps"] }
