[workspace]
resolver = "2"
members = [
  "easydep-client",
  "easydep-server",
]

[workspace.package]
version = "0.1.1"

edition = "2021"
rust-version = "1.80.0"

publish = false
authors = ["Pasqual Koschmieder"]

license = "MIT"
license-file = "LICENSE"
repository = "https://github.com/easybill/easydep"

[workspace.dependencies]
toml = "1"
anyhow = "1"
prost = "0.14"
symlink = "0.1"
secrecy = "0.10"
futures = "0.3"
octocrab = "0.49"
jsonwebtoken = "10"
serde = { version = "1.*", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive", "env"] }
tokio-stream = { version = "0.1", default-features = false, features = ["io-util", "fs"] }

log = "0.4"
env_logger = "0.11"

tonic = "0.14"
tonic-prost = "0.14"
tonic-types = "0.14"
tonic-build = "0.14"
tonic-prost-build = "0.14"

[profile.release-with-debug]
debug = true
inherits = "release"
split-debuginfo = "packed"
