[package]
name = "easydep-client"
version = { workspace = true }

edition = { workspace = true }
rust-version = { workspace = true }

authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
futures = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
prost = { workspace = true }
clap = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }

log = { workspace = true }
env_logger = { workspace = true }

tonic = { workspace = true }
tonic-types = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
